--- a/src/components/homePage/store/store.css
+++ b/src/components/homePage/store/store.css
@@ -260,3 +260,32 @@
     position: absolute;
     bottom: 20px;
 }
+
+@media all and (max-width: 768px){
+    .store-inner{
+        padding-left: 0!important;
+        padding-right: 0!important;
+        padding-top: 0!important;
+        display: block!important;
+    }
+    .store-inner .video-row,
+    .store-inner .about-row{
+        width: 100%!important;
+        padding-left: 0!important;
+        padding-right: 0!important;
+    }
+    .store-inner .about-row{
+        margin-top: 60px;
+    }
+    .active-store-item h3{
+        font-size: 14px;
+        margin-top: 10px;
+    }
+    .active-bottom-div{
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+    .active-store-item{
+        height: 350px!important;
+    }
+}
