--- a/src/containers/homePage/home.css
+++ b/src/containers/homePage/home.css
@@ -26,3 +26,51 @@
     margin: 0;
     position: fixed;
 }
+
+.nav__right{
+    padding-top: 75px;
+    height: 100vh; /* 100% Full-height */
+    width: 250px; /* 0 width - change this with JavaScript */
+    position: absolute; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    right: 0;
+    background-color: #fff; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    margin-right: -250px;
+    transition: margin .2s;
+    z-index: 1;
+}
+
+.nav__right.open-nav-right{
+    margin: 0;
+    position: fixed;
+}
+
+.wrapper.open-right-nav{
+    margin: 0 0 0 -250px;
+}
+
+.floating-button{
+    font-family: "LoewNextArabic-ExtraBold";
+    font-size: 16px;
+    font-weight: 800;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.81;
+    letter-spacing: normal;
+    color: #ffffff;
+    border-radius: 10px;
+    background-image: linear-gradient(107deg, #e83866 -26%, #e83866 -17%, #e57a3c 84%, #e57a3c 112%);
+    padding: 24px 56px;
+    border: none;
+    bottom: 30px;
+    margin: 0 auto;
+    position: fixed;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    width: 90%;
+}
